--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
     <!-- STYLESHEETS -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/styles.css"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,300" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://s.mlcdn.co/animate.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 </head>
@@ -29,11 +30,15 @@
         <header class="main-header">
 
             <!-- LOGO -->
-            <a href="/" class="logo hvr-rotate"><img src="./images/can.png" alt="logo" width="50"></a>
+            <a href="index.html" class="logo hvr-rotate"><img src="./images/can.png" alt="logo" width="50"></a>
             <!-- MAIN NAV -->
             <nav class="main-nav">
-                <a class="hvr-float" href="#">Gallery</a>
+                <a class="hvr-float" href="index.html">Home</a>
+                <div></div>
+                <a class="hvr-float" href="gallery.html">Gallery</a>
+                <div></div>
                 <a class="hvr-float" href="#">Availability</a>
+                <div></div>
                 <a class="no-border hvr-float" href="#">Local Information</a>
             </nav>
 
@@ -42,7 +47,11 @@
         <!-- MAIN -->
 
         <main>
-            <img src="./images/THE-GARDEN-ROOMS.png" alt="logo" width="200"/>
+            <!-- <img src="./images/THE-GARDEN-ROOMS.png" alt="logo" width="200"/> -->
+            <div class="headline">
+                <h1>THE GARDEN ROOMS</h1>
+            </div>
+
 
         </main>
 
@@ -70,10 +79,10 @@
                     </p>
                 </div>
                 <div class="column3">
-                    <h4>About</h4>
+                    <h4>News</h4>
                     <p>About Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
                     </p>
-                    <h4>About</h4>
+                    <h4>Twitter</h4>
                     <p>About Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
 
