--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <!-- <div class="container-fluid"> -->
-    <div class="container">
+    <div class="container container-has-image">
 
 
         <!-- HEADER -->
@@ -42,6 +42,7 @@
                 <a class="no-border hvr-float" href="#">Local Information</a>
             </nav>
 
+            <div class="burger"><img src="./images/burger.svg" alt="burger" width="40"></div>
         </header>
 
         <!-- MAIN -->
@@ -95,6 +96,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
 <!-- PLUGINS -->
+
+<script type="text/javascript" src="./scripts/fancybox/jquery.fancybox.pack.js?v=2.1.5"></script>
+
+<script type="text/javascript" src="./scripts/fancybox/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+<script type="text/javascript" src="./scripts/fancybox/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+
+<script type="text/javascript" src="./scripts/fancybox/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 
 <script src="scripts/backstretch.js"></script>
 
